--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -37,7 +40,8 @@
             android:name=".MainActivity"
             android:exported="false"/>
 
-        <receiver android:name=".NotificationReceiver" android:exported="false" />
+
+        <receiver android:name=".NotificationReceiver" android:enabled="true" android:exported="false" />
     </application>
 
 
