--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.MoodLog"
         tools:targetApi="31">
         <activity
+            android:name=".EmojiSelection"
+            android:exported="false" />
+        <activity
             android:name=".JournalDetail"
             android:exported="false" />
         <activity
@@ -24,12 +27,13 @@
             android:exported="false" />
         <activity
             android:name=".JournalEntry"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Dashboard"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -38,11 +42,12 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
 
-
-        <receiver android:name=".NotificationReceiver" android:enabled="true" android:exported="false" />
+        <receiver
+            android:name=".NotificationReceiver"
+            android:enabled="true"
+            android:exported="false" />
     </application>
-
 
 </manifest>
